--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Coming Soon - Start Bootstrap Theme</title>
+  <title>Congo Brazzaville Student Association (C.O.B.S.A)</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 
   <div class="overlay"></div>
   <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-    <source src="mp4/bg.mp4" type="video/mp4">
+    <source src="mp4/KSC.mp4" type="video/mp4">
   </video>
 
   <div class="masthead">
@@ -36,9 +36,10 @@
       <div class="row h-100">
         <div class="col-12 my-auto">
           <div class="masthead-content text-white py-5 py-md-0">
-            <h1 class="mb-3">Coming Soon!</h1>
-            <p class="mb-5">We're working hard to finish the development of this site. Our target launch date is
-              <strong>January 2019</strong>! Sign up for updates using the form below!</p>
+            <h1 class="mb-3">CO.B.S.A</h1>
+            <p class="mb-5" align="justify"> <strong>“FOR A STRONG EDUCATION”</strong> 
+              <br>Congo Brazzaville Students Association (CO.B.S.A) represent a student global views regarding the aspects such as promote, coordinate, and operate student’s activities, services and enhance channels of communication between the students and faculties, administration, alumni, universities, Republic Of Congo High Commission (Embassy) and other associations. <strong>CO.B.S.A</strong> was started on <strong>20th April 2014.</strong>
+            </p>  
             <div class="input-group input-group-newsletter">
               <input type="email" class="form-control" placeholder="Enter email..." aria-label="Enter email..." aria-describedby="basic-addon">
               <div class="input-group-append">
@@ -55,16 +56,21 @@
     <ul class="list-unstyled text-center mb-0">
       <li class="list-unstyled-item">
         <a href="#">
+          <i class="fas fa-bullseye"></i>
+        </a>
+      </li>
+      <li class="list-unstyled-item">
+        <a href="#">
           <i class="fab fa-twitter"></i>
         </a>
       </li>
       <li class="list-unstyled-item">
-        <a href="#">
+        <a href="https://www.facebook.com/groups/cobsahyderabadchapterindia/?epa=SEARCH_BOX">
           <i class="fab fa-facebook-f"></i>
         </a>
       </li>
       <li class="list-unstyled-item">
-        <a href="#">
+        <a href="https://www.instagram.com/242inde/">
           <i class="fab fa-instagram"></i>
         </a>
       </li>
