--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Congo Brazzaville Student Association (C.O.B.S.A)</title>
+  <title>Congo Brazzaville Student Association (CO.B.S.A)</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -36,10 +36,14 @@
       <div class="row h-100">
         <div class="col-12 my-auto">
           <div class="masthead-content text-white py-5 py-md-0">
-            <h1 class="mb-3">CO.B.S.A</h1>
-            <p class="mb-5" align="justify"> <strong>“FOR A STRONG EDUCATION”</strong> 
-              <br>Congo Brazzaville Students Association (CO.B.S.A) represent a student global views regarding the aspects such as promote, coordinate, and operate student’s activities, services and enhance channels of communication between the students and faculties, administration, alumni, universities, Republic Of Congo High Commission (Embassy) and other associations. <strong>CO.B.S.A</strong> was started on <strong>20th April 2014.</strong>
+            <h1 class="mb-3">Congo Brazzaville Student Association (CO.B.S.A)</h1>
+            <p class="mb-5" align="justify">“FOR A STRONG EDUCATION” 
+              <br>
+              CO.B.S.A. represent a student global views regarding the aspects such as promote, coordinate, and operate student’s activities, services and enhance channels of communication between the students and faculties, administration, alumni, universities, Republic Of Congo High Commission (Embassy) and other associations. 
+              <strong>CO.B.S.A</strong> was started on <strong>20th April 2014.</strong>
             </p>  
+            <strong></strong>
+
             <div class="input-group input-group-newsletter">
               <input type="email" class="form-control" placeholder="Enter email..." aria-label="Enter email..." aria-describedby="basic-addon">
               <div class="input-group-append">
