--- a/index.html
+++ b/index.html
@@ -45,9 +45,14 @@
             <strong></strong>
 
             <div class="input-group input-group-newsletter">
-              <input type="email" class="form-control" placeholder="Enter email..." aria-label="Enter email..." aria-describedby="basic-addon">
               <div class="input-group-append">
-                <button class="btn btn-secondary" type="button">Notify Me!</button>
+                
+                  <a href="ksc/index.html">
+                    <button class="btn btn-secondary" type="button">
+                    About Us
+                    </button>
+                  </a>
+                
               </div>
             </div>
           </div>
@@ -59,7 +64,7 @@
   <div class="social-icons">
     <ul class="list-unstyled text-center mb-0">
       <li class="list-unstyled-item">
-        <a href="#">
+        <a href="ksc/index.html">
           <i class="fas fa-bullseye"></i>
         </a>
       </li>
