--- a/ksc/index.html
+++ b/ksc/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Editorial by HTML5 UP</title>
+		<title>Congo Brazzaville Student Association (CO.B.S.A)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by MALAMU, INC</a>
+									<a href="index.html" class="logo"><strong>Editorial</strong> by Congo Brazzaville Student Association (CO.B.S.A)</a>
 									<ul class="icons">
 										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -36,13 +36,12 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, I’m Editorial<br />
-											by KSC CONGO</h1>
-											<p>Apporter, partager et apprendre</p>
+											<h1>Congo Brazzaville Student Association (CO.B.S.A)</h1>
+											<p>Pour une éducation positive</p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+										<p align="justify">Congo Brazzaville Student Association (CO.B.S.A) représente un étudiant vue d’ensemble sur les aspects tels que la promotion, la coordination et le fonctionnement des activités et des services de l’étudiant et d’améliorer les canaux de communication entre les étudiants et les facultés, l’administration, les anciens élèves, universités, haut-commissariat de la République du Congo (Ambassade) et autres associations. CO.B.S.A a débuté le 20 avril 2014.</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="generic.html" class="button big">Apprenez Plus</a></li>
 										</ul>
 									</div>
 									<span class="image object">
