6%, About Us, Done

--- a/ksc/generic.html
+++ b/ksc/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Editorial by HTML5 UP</title>
+		<title>Congo Brazzaville Student Association (CO.B.S.A)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,46 +22,53 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+									<a href="index.html" class="logo"><strong>Editorial</strong> by Congo Brazzaville Student Association (CO.B.S.A)</a>
 									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-medium"><span class="label">Medium</span></a></li>
+										<li><a href="#" class="icon fa-sign-in"><span class="label">Login</span></a></li>
 									</ul>
 								</header>
 
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Generic</h1>
+										<h1>About Us</h1>
 									</header>
 
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<span class="image main"><img src="images/cobsa.jpg" alt="" /></span>
 
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-
-									<hr class="major" />
-
-									<h2>Interdum sed dapibus</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+									<p align="justify">Dans le souci de poursuivre nos activités et de transmettre notre expérience acquise en INDE sur les opportunités pour accéder à une éducation de qualité par les nouvelles technologies et promouvoir un changement socio-économique positif des jeunes africains, nous jeunes congolaises et congolais ont décidé, conformément à la loi du 1er juillet 1901 sur les associations, de la création d’une ONG apolitique et laïc dénommée « Congo Brazzaville Student Association (CO.B.S.A) ». Cette organisation à caractère socio- éducatif et culturel, œuvre pour la promotion de l’éducation par les nouvelles technologies. Elle symbolise un lieu de convergence, de consolidation de la fraternité, la solidarité et d’éveil des filles et fils Congolais. Congo Brazzaville Student Association (CO.B.S.A) permet aux étudiants d’acquérir les compétences nécessaires pour réussir dans leur carrière et établit des liens entre les employeurs et les étudiants et les diplômés. Foundé le 20 avril 2014, Congo Brazzaville Student Association (CO.B.S.A) représente un étudiant vue d’ensemble sur les aspects tels que la promotion, la coordination et le fonctionnement des activités et des services de l’étudiant et d’améliorer les canaux de communication entre les étudiants et les facultés, l’administration, les anciens élèves, universités, haut-commissariat de la République du Congo (Ambassade) et autres associations.</p>
+									<p>« Adopter des pratiques exemplaires à l’échelle mondiale pour stimuler l’innovation »</p>
+									<p>Date de Foundation le 20 avril 2014</p>
 
 									<hr class="major" />
 
-									<h2>Magna etiam veroeros</h2>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+									<h2>Notre Mission</h2>
+									<p align="justify">Notre mission est d’être le partenaire de confiance pour les études à court terme à l’étranger, les stages et les programmes de perfectionnement professionnel en Afrique et en Asie.</p>
+									<p align="justify">Nous nous engageons à respecter les normes les plus élevées de qualité académique et professionnelle et à assurer la santé et la sécurité de nos partenaire.</p>
 
 									<hr class="major" />
 
-									<h2>Lorem aliquam bibendum</h2>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+									<h2>Notre Vision</h2>
+									<p align="justify">Ce qui nous distingue vraiment, cependant, c’est notre passion pour le développement durable. Nous souhaitons vivement inspirer et responsabiliser nos participants et les communautés avec lesquelles ils s’engagent pour avoir un impact réciproque significatif et créer des changements positifs dans le monde.</p>
+									<p align="justify"></p>
 
+									<hr class="major" />
+
+									<h2>Notre Equipe</h2>
+									<p align="justify">
+										CONGO BRAZZAVILLE STUDENTS ASSOCIATION (CO.B.S.A) se spécialise dans des secteurs comme l’éducation, les soins de santé et les TI. Les fondateurs de CONGO BRAZZAVILLE STUDENTS ASSOCIATION (CO.B.S.A), appelés CONGO KSC FELLOW, ont travaillé avec certaines des plus grandes organisations du monde, comme NEF [Next Einstein Forum]; VMedia [qui est une entreprise innovatrice en croissance rapide basée à Toronto, Canada], développer et mettre en œuvre leurs projets en Afrique, en réalisant des projets allant des stratégies initiales d’entrée sur le marché au lancement de nouvelles institutions bénéficiant d’un soutien multinational.
+									</p>
+
+									<hr class="major" />
+
+									<h3>CONGO BRAZZAVILLE STUDENTS ASSOCIATION (CO.B.S.A)
+										<br>
+									8-1-398/PM/37, 4th Floor,Paramount Hills, ToliChowki, Hyderabad - 500008. Telangana State, INDIA.
+										<br>
+									Tel: (+91) 9700250406, 8978656875 | (+242) 055213346
+										<br>
+									Email: ​ congoassociationindia@gmail.com
+									</h3>
 								</section>
 
 						</div>
@@ -84,32 +91,30 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="generic.html">About Us</a></li>
+										<li><a href="elements.html">Photo & Vidéo</a></li>
+										<li><a href="#">Alumni Network</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Study Abroad Programs</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="#">e-Learning</a></li>
+												<li><a href="#">e-Education</a></li>
+												<li><a href="#">e-Culture & Heritage</a></li>
+												<li><a href="#">e-Entretainment</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
 										<li>
-											<span class="opener">Another Submenu</span>
+											<span class="opener">Professional Development Programs</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="#">e-Business & Entreprise</a></li>
+												<li><a href="#">e-Health</a></li>
+												<li><a href="#">e-News & Media</a></li>
+												<li><a href="#">e-travel & Tourism</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+										<li><a href="#">Faculty-Led and Custom Programs</a></li>
+										<li><a href="#">Our Team</a></li>
 									</ul>
 								</nav>
 
