--- a/ksc/index.html
+++ b/ksc/index.html
@@ -24,11 +24,7 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Editorial</strong> by Congo Brazzaville Student Association (CO.B.S.A)</a>
 									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-medium"><span class="label">Medium</span></a></li>
+										<li><a href="#" class="icon fa-sign-in" aria-hidden="true"><span class="label">Login</span></a></li>
 									</ul>
 								</header>
 
@@ -36,16 +32,16 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Congo Brazzaville Student Association (CO.B.S.A)</h1>
+											<h1>CO.B.S.A</h1>
 											<p>Pour une éducation positive</p>
 										</header>
-										<p align="justify">Congo Brazzaville Student Association (CO.B.S.A) représente un étudiant vue d’ensemble sur les aspects tels que la promotion, la coordination et le fonctionnement des activités et des services de l’étudiant et d’améliorer les canaux de communication entre les étudiants et les facultés, l’administration, les anciens élèves, universités, haut-commissariat de la République du Congo (Ambassade) et autres associations. CO.B.S.A a débuté le 20 avril 2014.</p>
+										<p align="justify">Congo Brazzaville Student Association (CO.B.S.A) représente un étudiant vue d’ensemble sur les aspects tels que la promotion, la coordination et le fonctionnement des activités et des services de l’étudiant et d’améliorer les canaux de communication entre les étudiants et les facultés, l’administration, les anciens élèves, universités, haut-commissariat de la République du Congo (Ambassade) et autres associations.</p>
 										<ul class="actions">
 											<li><a href="generic.html" class="button big">Apprenez Plus</a></li>
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/team.jpg" alt="" />
 									</span>
 								</section>
 
@@ -93,7 +89,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/tw.jpg" alt="" /></a>
 											<h3>Interdum aenean</h3>
 											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											<ul class="actions">
@@ -163,39 +159,37 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="generic.html">About Us</a></li>
+										<li><a href="elements.html">Photo & Vidéo</a></li>
+										<li><a href="#">Alumni Network</a></li>
 										<li>
-											<span class="opener">Submenu</span>
+											<span class="opener">Study Abroad Programs</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="#">e-Learning</a></li>
+												<li><a href="#">e-Education</a></li>
+												<li><a href="#">e-Culture & Heritage</a></li>
+												<li><a href="#">e-Entretainment</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
 										<li>
-											<span class="opener">Another Submenu</span>
+											<span class="opener">Professional Development Programs</span>
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+												<li><a href="#">e-Business & Entreprise</a></li>
+												<li><a href="#">e-Health</a></li>
+												<li><a href="#">e-News & Media</a></li>
+												<li><a href="#">e-travel & Tourism</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+										<li><a href="#">Faculty-Led and Custom Programs</a></li>
+										<li><a href="#">Our Team</a></li>
 									</ul>
 								</nav>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>About Us</h2>
+										<h2>Notes</h2>
 									</header>
 									<div class="mini-posts">
 										<article>
