--- a/ksc/index.html
+++ b/ksc/index.html
@@ -48,35 +48,35 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Erat lacinia</h2>
+										<h2>Future Students</h2>
 									</header>
 									<div class="features">
 										<article>
 											<span class="icon fa-diamond"></span>
 											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Apply</h3>
+												<p align="justify">Si vous cherchez la chance d’essayer de nouvelles choses, de rencontrer des gens intéressants et d’écrire votre propre avenir. Nous encourageons les élèves à saisir toutes les occasions - des occasions qui mènent souvent à des résultats inattendus mais enrichissants.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon fa-paper-plane"></span>
 											<div class="content">
-												<h3>Sapien veroeros</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Engagement</h3>
+												<p align="justify">Dans le domaine de l’éducation, l’engagement des élèves se réfère au degré d’attention, de curiosité, d’intérêt, d’optimisme et de passion dont ils font preuve lorsqu’ils apprennent ou sont enseignés. qui s’étend au niveau de motivation qu’ils ont à apprendre et à progresser dans leur éducation.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon fa-rocket"></span>
 											<div class="content">
-												<h3>Quam lorem ipsum</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>UpSkill</h3>
+												<p align="justify">Nous offrons des expériences d’apprentissage qui favorisent la réussite.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon fa-signal"></span>
 											<div class="content">
-												<h3>Sed magna finibus</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Network</h3>
+												<p align="justify">Joignez-vous à la conversation et devenez membre de l’organisation la plus efficace et la mieux branchée au monde.</p>
 											</div>
 										</article>
 									</div>
@@ -85,7 +85,7 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ipsum sed dolor</h2>
+										<h2>Students life</h2>
 									</header>
 									<div class="posts">
 										<article>
