--- a/ksc/generic.html
+++ b/ksc/generic.html
@@ -93,8 +93,8 @@
 									<ul>
 										<li><a href="index.html">Home</a></li>
 										<li><a href="generic.html">About Us</a></li>
-										<li><a href="elements.html">Photo & Vidéo</a></li>
-										<li><a href="#">Alumni Network</a></li>
+										<li><a href="https://www.instagram.com/242inde/">Photo & Vidéo</a></li>
+										<li><a href="https://chat.whatsapp.com/LGxLfoy9bEu8Hl7GH7JaGy">Alumni Network</a></li>
 										<li>
 											<span class="opener">Study Abroad Programs</span>
 											<ul>
@@ -113,8 +113,7 @@
 												<li><a href="#">e-travel & Tourism</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Faculty-Led and Custom Programs</a></li>
-										<li><a href="#">Our Team</a></li>
+										<li><a href="http://www.knowledgesharingcampaign.org/">Faculty-Led and Custom Programs</a></li>
 									</ul>
 								</nav>
 
@@ -147,18 +146,18 @@
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>Pour en savoir plus, s’associer ou soutenir Congo Brazzaville Student Association (CO.B.S.A). Pour toute question sur les admissions, contactez :</p>
 									<ul class="contact">
-										<li class="fa-envelope-o"><a href="#">information@untitled.tld</a></li>
-										<li class="fa-phone">(000) 000-0000</li>
-										<li class="fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="fa-envelope-o"><a href="#">paulcy.mboungou@gmail.com</a></li>
+										<li class="fa-phone">(+91) 9951817798 | (+242) 069403195</li>
+										<li class="fa-home">Sun City, Hyderbad<br />
+										INDIA, PIN CODE: 500086</li>
 									</ul>
 								</section>
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">&copy; Congo Brazzaville Student Association (CO.B.S.A). All rights reserved. Supported by: <a href="http://10academy.org/">UpSkill</a>. Design: <a href="http://www.knowledgesharingcampaign.org/">KSC - Bring, Share & Learn.</a>.</p>
 								</footer>
 
 						</div>
