--- a/ksc/generic.html
+++ b/ksc/generic.html
@@ -95,15 +95,7 @@
 										<li><a href="generic.html">About Us</a></li>
 										<li><a href="https://www.instagram.com/242inde/">Photo & Vidéo</a></li>
 										<li><a href="https://chat.whatsapp.com/LGxLfoy9bEu8Hl7GH7JaGy">Alumni Network</a></li>
-										<li>
-											<span class="opener">Study Abroad Programs</span>
-											<ul>
-												<li><a href="#">e-Learning</a></li>
-												<li><a href="#">e-Education</a></li>
-												<li><a href="#">e-Culture & Heritage</a></li>
-												<li><a href="#">e-Entretainment</a></li>
-											</ul>
-										</li>
+										<li><a href="http://www.knowledgesharingcampaign.org/">Faculty-Led and Custom Programs</a></li>
 										<li>
 											<span class="opener">Professional Development Programs</span>
 											<ul>
@@ -113,14 +105,22 @@
 												<li><a href="#">e-travel & Tourism</a></li>
 											</ul>
 										</li>
-										<li><a href="http://www.knowledgesharingcampaign.org/">Faculty-Led and Custom Programs</a></li>
+										<li>
+											<span class="opener">Study Abroad Programs</span>
+											<ul>
+												<li><a href="#">e-Learning</a></li>
+												<li><a href="#">e-Education</a></li>
+												<li><a href="#">e-Culture & Heritage</a></li>
+												<li><a href="#">e-Entretainment</a></li>
+											</ul>
+										</li>
 									</ul>
 								</nav>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ante interdum</h2>
+										<h2>Notes Of CO.B.S.A</h2>
 									</header>
 									<div class="mini-posts">
 										<article>
