--- a/ksc/index.html
+++ b/ksc/index.html
@@ -89,11 +89,11 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/tw.jpg" alt="" /></a>
+											<a href="https://drive.google.com/file/d/0B4-wD-64gaw-aHpMUS1WZkR1YW81MHExSXVUbmNNcngxU25V/view?usp=sharing" class="image"><img src="images/tw.jpg" alt="" /></a>
 											<h3>Congo Brazzaville Student Association (CO.B.S.A) | UpSkill</h3>
-											
+											<p align="justify">Congo Brazzaville Student Association (CO.B.S.A) existe pour identifier ces jeunes les plus brillants, leur permettre de se perfectionner à distance, leur fournir une formation en personne et leur donner des occasions d’avoir 10x impact. Nous croyons que les jeunes les plus brillants, équipés des bons outils et de la bonne occasion peuvent profiter de 10 fois l’impact de leurs pairs. Cela peut se produire en tant qu’employé, entrepreneur ou travaillant dans le secteur sans but lucratif. Cela a été démontré scientifiquement dans de nombreux domaines des affaires, des arts et des sciences. Nous permettons aux jeunes les plus prometteurs d’Afrique de lancer leur carrière avec 10x d’impact. Nous nous concentrons sur les ressortissants du Congo Brazzaville & RDC, offrant une formation et des connexions à des postes rémunérés dans le domaine de la science des données.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="https://drive.google.com/file/d/0B4-wD-64gaw-aHpMUS1WZkR1YW81MHExSXVUbmNNcngxU25V/view?usp=sharing" class="button">More</a></li>
 											</ul>
 										</article>
 										<article>
@@ -163,15 +163,7 @@
 										<li><a href="generic.html">About Us</a></li>
 										<li><a href="https://www.instagram.com/242inde/">Photo & Vidéo</a></li>
 										<li><a href="https://chat.whatsapp.com/LGxLfoy9bEu8Hl7GH7JaGy">Alumni Network</a></li>
-										<li>
-											<span class="opener">Study Abroad Programs</span>
-											<ul>
-												<li><a href="#">e-Learning</a></li>
-												<li><a href="#">e-Education</a></li>
-												<li><a href="#">e-Culture & Heritage</a></li>
-												<li><a href="#">e-Entretainment</a></li>
-											</ul>
-										</li>
+										<li><a href="http://www.knowledgesharingcampaign.org/">Faculty-Led and Custom Programs</a></li>
 										<li>
 											<span class="opener">Professional Development Programs</span>
 											<ul>
@@ -181,7 +173,15 @@
 												<li><a href="#">e-travel & Tourism</a></li>
 											</ul>
 										</li>
-										<li><a href="http://www.knowledgesharingcampaign.org/">Faculty-Led and Custom Programs</a></li>
+										<li>
+											<span class="opener">Study Abroad Programs</span>
+											<ul>
+												<li><a href="#">e-Learning</a></li>
+												<li><a href="#">e-Education</a></li>
+												<li><a href="#">e-Culture & Heritage</a></li>
+												<li><a href="#">e-Entretainment</a></li>
+											</ul>
+										</li>
 									</ul>
 								</nav>
 
@@ -197,8 +197,9 @@
 											<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="paulcymboungou"><a class="LI-simple-link" href='https://in.linkedin.com/in/paulcymboungou?trk=profile-badge'>Paulcy Mboungou</a></div>
 										</article>
 										<article>
-											<a href="http://www.knowledgesharingcampaign.org/" class="image"><img src="images/bsl.jpg" alt="" /></a>
+											<a href="http://www.knowledgesharingcampaign.org/" class="image"><img src="images/ksc.png" alt="" /></a>
 											<p>UpSkill | e-Education.</p>
+											<div><a href="article/ksc.pdf" download>KSC - Bring, Share & Learn.</a></div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/logo.png" alt="" /></a>
