--- a/ksc/generic.html
+++ b/ksc/generic.html
@@ -124,20 +124,26 @@
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+											<a href="#" class="image"><img src="images/ctw.jpg" alt="" /></a>
+											<p align="justify">Donner à l’éducation et à l’attirail de nouveaux outils technologiques; transformer les écoles, les universités et les autres établissements d’enseignement au moyen de ressources d’apprentissage interactives, personnalisées et distribuées; fournir des infrastructures pour les établissements d’enseignement ruraux, en particulier les écoles.</p>
+											<ul class="actions">
+												<li><a href="#" class="button">UpSkill | E-Education</a></li>
+											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+											<a href="#" class="image"><img src="images/kolo.jpg" alt="" /></a>
+											<p align="justify">Répondre aux besoins des apprenants d’acquérir des connaissances et des compétences pour un monde complexe et globalisant, créer des communautés actives d’apprentissage en ligne et cibler des modèles et des solutions pour la formation en entreprise, en éducation et en développement, soutenir les premières étapes du multimédia pour de meilleures sociétés apprenantes.</p>
+											<ul class="actions">
+												<li><a href="#" class="button">UpSkill | E-Learning</a></li>
+											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+											<a href="#" class="image"><img src="images/hpm.jpg" alt="" /></a>
+											<p align="justify">Élaboration d’un modèle de soins de santé axé sur le consommateur où les intervenants collaborent, en utilisant la technologie de l’information et de la communication, y compris les technologies Internet pour gérer les problèmes de santé ainsi que le système de soins de santé.</p>
 										</article>
 									</div>
 									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
+										<li><a href="#" class="button">UpSkill | E-Health</a></li>
 									</ul>
 								</section>
 
